--- a/infrastructure/kube-prometheus-stack/kustomization.yaml
+++ b/infrastructure/kube-prometheus-stack/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ogc-telemetry
 resources:
-  - sources
-  - nginx
-  - kube-prometheus-stack
-
+  - namespace.yaml
+  - release.yaml
