--- a/infrastructure/sealed-secrets/kustomization.yaml
+++ b/infrastructure/sealed-secrets/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: nginx
 resources:
-  - sources
-  - nginx
-  - kube-prometheus-stack
-  - sealed-secrets
-
+  - namespace.yaml
+  - release.yaml
