--- a/clusters/fluxtesting/infrastructure/nginx/nginx-values.yaml
+++ b/clusters/fluxtesting/infrastructure/nginx/nginx-values.yaml
@@ -3,4 +3,12 @@ kind: HelmRelease
 metadata:
   name: nginx
 spec:
-  releaseName: nginx-ingress-controller-internal
+  releaseName: nginx-ingress-controller
+values:
+  controller:
+    ingressClassResource:
+      name: private
+      enabled: true
+      default: true
+    ingressClass: private
+
